# rotms-slicer

./: .gitignore  CMakeLists.txt  Config.json  README.md  UtilCalculations.py  UtilSlicerFuncs.py
MRIPlan/: CMakeLists.txt  MRIPlan.py  MedImgPlan.py
MRIPlan/Resources/UI/: MRIPlan.ui
MedImgPlan/: CMakeLists.txt  MedImgPlan.py
MedImgPlan/MedImgPlanLib/: LogicMedImg.py  UtilCalculations.py  UtilConnections.py  UtilConnectionsWtNnBlcRcv.py  UtilFormat.py  UtilMedImgConnections.py  UtilSlicerFuncs.py  WidgetMedImg.py
MedImgPlan/Resources/Configs/: CommandsConfig.json  Config.json  plane.STL  point.STL  poseindicator.STL  toolpose.STL
MedImgPlan/Resources/UI/: MedImgPlan.ui
RobotControl/: CMakeLists.txt  RobotControl.py
RobotControl/Resources/Configs/: CommandsConfig.json  Config.json
RobotControl/Resources/UI/: RobotControl.ui
RobotControl/RobotControlLib/: UtilConnections.py  UtilFormat.py
SlicerTestExample/: CMakeLists.txt  SlicerTestExample.py
SlicerTestExample/Resources/UI/: SlicerTestExample.ui
TargetVisualization/: CMakeLists.txt  TargetVisualization.py
TargetVisualization/Resources/Configs/: CommandsConfig.json  Config.json  toolpose.STL
TargetVisualization/Resources/UI/: TargetVisualization.ui
TargetVisualization/TargetVisualizationLib/: UtilCalculations.py  UtilConnections.py  UtilConnectionsWtNnBlcRcv.py  UtilSlicerFuncs.py
